--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-input-range": "^1.3.0",
     "react-pure-lifecycle": "^3.0.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
